extends Control

var last_window_size = Vector2.ZERO
var language := "en"  # Default language

# List of bilingual science questions
var questions = [
	{
		"en": {
			"question": "Which part of a plant makes food?",
			"options": ["Root", "Leaf", "Stem", "Flower"],
			"hint": "Hint: It contains chlorophyll and is flat to capture sunlight."
		},
		"hi": {
			"question": "рдкреМрдзреЗ рдХрд╛ рдХреМрди рд╕рд╛ рднрд╛рдЧ рднреЛрдЬрди рдмрдирд╛рддрд╛ рд╣реИ?",
			"options": ["рдЬрдбрд╝", "рдкрддреНрддрд╛", "рддрдирд╛", "рдлреВрд▓"],
			"hint": "рд╕рдВрдХреЗрдд: рдЗрд╕рдореЗрдВ рдХреНрд▓реЛрд░реЛрдлрд┐рд▓ рд╣реЛрддрд╛ рд╣реИ рдФрд░ рдпрд╣ рд╕реВрд░реНрдп рдХреА рд░реЛрд╢рдиреА рдкрдХрдбрд╝рдиреЗ рдХреЗ рд▓рд┐рдП рдЪрдкрдЯрд╛ рд╣реЛрддрд╛ рд╣реИред"
		},
		"correct": "b"
	},
	{
		"en": {
			"question": "Which gas do we breathe in that is essential for life?",
			"options": ["Carbon Dioxide", "Oxygen", "Nitrogen", "Hydrogen"],
			"hint": "Hint: It is the gas plants release during photosynthesis."
		},
		"hi": {
			"question": "рд╣рдо рдХреМрди рд╕реА рдЧреИрд╕ рд╕рд╛рдБрд╕ рдореЗрдВ рд▓реЗрддреЗ рд╣реИрдВ рдЬреЛ рдЬреАрд╡рди рдХреЗ рд▓рд┐рдП рдЖрд╡рд╢реНрдпрдХ рд╣реИ?",
			"options": ["рдХрд╛рд░реНрдмрди рдбрд╛рдЗрдСрдХреНрд╕рд╛рдЗрдб", "рдСрдХреНрд╕реАрдЬрди", "рдирд╛рдЗрдЯреНрд░реЛрдЬрди", "рд╣рд╛рдЗрдбреНрд░реЛрдЬрди"],
			"hint": "рд╕рдВрдХреЗрдд: рдпрд╣ рд╡рд╣ рдЧреИрд╕ рд╣реИ рдЬреЛ рдкреМрдзреЗ рдкреНрд░рдХрд╛рд╢ рд╕рдВрд╢реНрд▓реЗрд╖рдг рдХреЗ рджреМрд░рд╛рди рдЫреЛрдбрд╝рддреЗ рд╣реИрдВред"
		},
		"correct": "b"
	},
	{
		"en": {
			"question": "What is the boiling point of water?",
			"options": ["50┬░C", "100┬░C", "0┬░C", "37┬░C"],
			"hint": "Hint: Water turns to steam at this temperature."
		},
		"hi": {
			"question": "рдкрд╛рдиреА рдХрд╛ рдХреНрд╡рдердирд╛рдВрдХ рдХреНрдпрд╛ рд╣реИ?",
			"options": ["50┬░C", "100┬░C", "0┬░C", "37┬░C"],
			"hint": "рд╕рдВрдХреЗрдд: рдЗрд╕ рддрд╛рдкрдорд╛рди рдкрд░ рдкрд╛рдиреА рднрд╛рдк рдореЗрдВ рдмрджрд▓рддрд╛ рд╣реИред"
		},
		"correct": "b"
	},
	{
		"en": {
			"question": "What do bees collect from flowers to make honey?",
			"options": ["Water", "Seeds", "Nectar", "Pollen"],
			"hint": "Hint: It's the sweet liquid found inside flowers."
		},
		"hi": {
			"question": "рдордзреБрдордХреНрдЦрд┐рдпрд╛рдБ рдлреВрд▓реЛрдВ рд╕реЗ рдХреНрдпрд╛ рдЗрдХрдЯреНрдард╛ рдХрд░рддреА рд╣реИрдВ рдЬрд┐рд╕рд╕реЗ рд╢рд╣рдж рдмрдирддрд╛ рд╣реИ?",
			"options": ["рдкрд╛рдиреА", "рдмреАрдЬ", "рд░рд╕ (рдиреЗрдХреНрдЯрд░)", "рдкрд░рд╛рдЧ (рдкреЛрд▓рди)"],
			"hint": "рд╕рдВрдХреЗрдд: рдпрд╣ рдлреВрд▓реЛрдВ рдХреЗ рдЕрдВрджрд░ рдкрд╛рдпрд╛ рдЬрд╛рдиреЗ рд╡рд╛рд▓рд╛ рдореАрдард╛ рддрд░рд▓ рд╣реЛрддрд╛ рд╣реИред"
		},
		"correct": "c"
	},
	{
		"en": {
			"question": "Which of these is a source of energy?",
			"options": ["Plastic", "Rock", "Sun", "Paper"],
			"hint": "Hint: It's a natural source of heat and light."
		},
		"hi": {
			"question": "рдЗрдирдореЗрдВ рд╕реЗ рдХреМрди рдКрд░реНрдЬрд╛ рдХрд╛ рд╕реНрд░реЛрдд рд╣реИ?",
			"options": ["рдкреНрд▓рд╛рд╕реНрдЯрд┐рдХ", "рдкрддреНрдерд░", "рд╕реВрд░рдЬ", "рдХрд╛рдЧрдЬ"],
			"hint": "рд╕рдВрдХреЗрдд: рдпрд╣ рдЧрд░реНрдореА рдФрд░ рдкреНрд░рдХрд╛рд╢ рдХрд╛ рдПрдХ рдкреНрд░рд╛рдХреГрддрд┐рдХ рд╕реНрд░реЛрдд рд╣реИред"
		},
		"correct": "c"
	}
]

var current_question = 0
var answered_correctly = false

@onready var question_label = $QuestionLabel
@onready var hint_label = $Panel/HintLabel
@onready var next_button = $Panel/NextButton
@onready var panel = $Panel
@onready var expression_label = $Panel/ExpressionLabel
@onready var language_button = $LanguageButton

func _ready():
	MathBgm.allow_music = true
	if not MathBgm.player.playing:
		MathBgm.player.play()
		
	load_question()
	panel.visible = false
	update_language_button_text()

	if DisplayServer.window_get_mode() == DisplayServer.WINDOW_MODE_WINDOWED:
		var size = get_viewport().get_visible_rect().size
		DisplayServer.window_set_size(size)
		DisplayServer.window_set_min_size(size)
		DisplayServer.window_set_max_size(size)
		last_window_size = size
	else:
		adjust_scaleup_to_window()

func _process(_delta):
	if DisplayServer.window_get_mode() == DisplayServer.WINDOW_MODE_MAXIMIZED:
		DisplayServer.window_set_mode(DisplayServer.WINDOW_MODE_FULLSCREEN)
		last_window_size = get_viewport().get_visible_rect().size
		adjust_scaleup_to_window()

func load_question():
	var q = questions[current_question][language]
	question_label.text = q["question"]
	var options = q["options"]
	$Buttons/ButtonA.text = "A. " + options[0]
	$Buttons/ButtonB.text = "B. " + options[1]
	$Buttons/ButtonC.text = "C. " + options[2]
	$Buttons/ButtonD.text = "D. " + options[3]

	panel.visible = false
	answered_correctly = false
	for b in $Buttons.get_children():
		b.disabled = false

func _on_button_pressed(answer: String):
	if answered_correctly:
		return

	panel.visible = true
	var q = questions[current_question]
	if answer == q["correct"]:
		hint_label.add_theme_color_override("font_color", Color(0, 0.427, 0))
		hint_label.text = "    Correct! Press 'Next Question' to continue." if language == "en" else "    рд╕рд╣реА! рдЬрд╛рд░реА рд░рдЦрдиреЗ рдХреЗ рд▓рд┐рдП 'рдЕрдЧрд▓рд╛ рдкреНрд░рд╢реНрди' рджрдмрд╛рдПрдВред"
		expression_label.text = "ЁЯе│"
		answered_correctly = true
		next_button.text = "Next Question" if language == "en" else "рдЕрдЧрд▓рд╛ рдкреНрд░рд╢реНрди"
		for b in $Buttons.get_children():
			b.disabled = true
	else:
		hint_label.add_theme_color_override("font_color", Color(1, 0, 0))
		hint_label.text = "    " + q[language]["hint"]
		expression_label.text = "ЁЯдФ"
		next_button.text = "Ok" if language == "en" else "рдареАрдХ рд╣реИ"

func _on_button_a_pressed(): _on_button_pressed("a")
func _on_button_b_pressed(): _on_button_pressed("b")
func _on_button_c_pressed(): _on_button_pressed("c")
func _on_button_d_pressed(): _on_button_pressed("d")

func _on_next_button_pressed():
	if answered_correctly:
		current_question += 1
		if current_question < questions.size():
			load_question()
		else:
			hint_label.text = "    Quiz complete! You did it!" if language == "en" else "    рдкреНрд░рд╢реНрдиреЛрддреНрддрд░реА рд╕рдорд╛рдкреНрдд! рдЖрдкрдиреЗ рдХрд░ рджрд┐рдЦрд╛рдпрд╛!"
			next_button.visible = false
	else:
		panel.visible = false

func _on_language_button_pressed():
	language = "hi" if language == "en" else "en"
	update_language_button_text()
	if current_question < questions.size():
		load_question()
	else :
		hint_label.text = "    Quiz complete! You did it!" if language == "en" else "    рдкреНрд░рд╢реНрдиреЛрддреНрддрд░реА рд╕рдорд╛рдкреНрдд! рдЖрдкрдиреЗ рдХрд░ рджрд┐рдЦрд╛рдпрд╛!"
		next_button.visible = false

func update_language_button_text():
	language_button.text = "Switch to Hindi" if language == "en" else "рдЕрдВрдЧреНрд░реЗрдЬрд╝реА рдореЗрдВ рдмрджрд▓реЗрдВ"

func _input(event):
	if event is InputEventKey and event.pressed:
		if event.keycode == KEY_ESCAPE:
			DisplayServer.window_set_mode(DisplayServer.WINDOW_MODE_WINDOWED)
			var size = get_viewport().get_visible_rect().size
			DisplayServer.window_set_size(size)
			DisplayServer.window_set_min_size(size)
			DisplayServer.window_set_max_size(size)
			last_window_size = size
			adjust_scaledown_to_window()

func adjust_scaleup_to_window():
	var root = self
	var screen_size = get_viewport().get_visible_rect().size
	var texture_size = Vector2(1920, 1080)
	var scale_factor = screen_size / texture_size
	root.scale = Vector2(
		min(scale_factor.x, scale_factor.y) * 1.671,
		min(scale_factor.x, scale_factor.y) * 1.67
	)

func adjust_scaledown_to_window():
	var root = self
	var screen_size = get_viewport().get_visible_rect().size
	var texture_size = last_window_size
	var scale_factor = screen_size / texture_size
	root.scale = Vector2(
		min(scale_factor.x, scale_factor.y),
		min(scale_factor.x, scale_factor.y)
	)
